--- a/app/Resources/translations/messages.de.yml
+++ b/app/Resources/translations/messages.de.yml
@@ -1,4 +1,4 @@
-lang: Deutsch
+# This file is auto-generated using Crowdin.
 button.ok: OK
 button.cancel: Abbrechen
 button.yes: Ja
@@ -69,13 +69,13 @@ password.cant_change: 'Dieses Konto verwendet eine externe Authentifizierungs-Qu
 security.forgot_password: 'Kennwort vergessen'
 security.forgot_password.email_sent: 'Eine E-Mail mit Anweisungen, ein neues Kennwort zu wählen, wurde Ihnen geschickt.'
 security.change_password: 'Kennwort ändern'
-security.password_expired: ~
-key.tab: ~
-key.space: ~
-comma: ~
-colon: ~
-semicolon: ~
-vertical_line: ~
+security.password_expired: 'Your password has expired or the administrator requires you to change it.'
+key.tab: Tab
+key.space: Space
+comma: Comma
+colon: Colon
+semicolon: Semicolon
+vertical_line: 'Vertical line'
 file: Datei
 size: Größe
 delimiter: Trennzeichen
@@ -118,21 +118,21 @@ template.locked: Gesperrt
 template.confirm.delete: 'Möchten Sie diese Anfrageart wirklich löschen?'
 template.conflict.name: 'Eine Anfrageart mit diesem Namen existiert bereits.'
 template.conflict.prefix: 'Eine Anfrageart mit diesem Präfix existiert bereits.'
-template.permission.view_records: ~
-template.permission.create_records: ~
-template.permission.edit_records: ~
-template.permission.postpone_records: ~
-template.permission.resume_records: ~
-template.permission.reassign_records: ~
-template.permission.reopen_records: ~
-template.permission.add_comments: ~
-template.permission.add_files: ~
-template.permission.remove_files: ~
-template.permission.private_comments: ~
-template.permission.send_reminders: ~
-template.permission.delete_records: ~
-template.permission.attach_subrecords: ~
-template.permission.detach_subrecords: ~
+template.permission.view_records: 'View records'
+template.permission.create_records: 'Create records'
+template.permission.edit_records: 'Edit records'
+template.permission.postpone_records: 'Postpone records'
+template.permission.resume_records: 'Resume records'
+template.permission.reassign_records: 'Reassign records'
+template.permission.reopen_records: 'Reopen records'
+template.permission.add_comments: 'Add comments'
+template.permission.add_files: 'Add files'
+template.permission.remove_files: 'Remove files'
+template.permission.private_comments: 'Add/read private comments'
+template.permission.send_reminders: 'Send reminders'
+template.permission.delete_records: 'Delete records'
+template.permission.attach_subrecords: 'Attach subrecords'
+template.permission.detach_subrecords: 'Detach subrecords'
 state: Status
 states: Status
 state.new: 'Neuer Status'
@@ -143,12 +143,12 @@ state.type.initial: Startstatus
 state.type.interim: Zwischenstatus
 state.type.final: Endstatus
 state.responsible: Bearbeiter(in)
-state.responsibles: ~
+state.responsibles: Responsibles
 state.responsible.keep: Beibehalten
 state.responsible.assign: Zuordnen
 state.responsible.remove: Abziehen
 state.transitions: Übergänge
-state.next_for: ~
+state.next_for: 'Next state by default for'
 state.make_initial: 'Als Startstatus'
 state.confirm.delete: 'Möchten Sie diesen Status wirklich löschen?'
 state.conflict.name: 'Ein Status mit diesem Namen existiert bereits.'
@@ -157,5 +157,5 @@ field.conflict.name: 'Ein Zusatz mit diesem Namen existiert bereits.'
 field.min_max_values: 'Das Maximum muss größer als das Minimum sein.'
 field.default_value: 'Der vorgegebene Wert muss im Bereich von %min% bis %max% liegen.'
 field.value_range: 'Der Wert von "%name%" muss im Bereich von %min% bis %max% liegen.'
-list.conflict.key: ~
-list.conflict.value: ~
+list.conflict.key: 'Item with entered key already exists.'
+list.conflict.value: 'Item with entered value already exists.'
