--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -1,4 +1,3 @@
-lang: English
 button.ok: OK
 button.cancel: Cancel
 button.yes: 'Yes'
@@ -143,7 +142,7 @@ state.type.initial: Initial
 state.type.interim: Interim
 state.type.final: Final
 state.responsible: Responsible
-state.responsibles: ~
+state.responsibles: Responsibles
 state.responsible.keep: 'Keep unchanged'
 state.responsible.assign: Assign
 state.responsible.remove: Remove
