--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -1,4 +1,4 @@
-lang: Español
+# This file is auto-generated using Crowdin.
 button.ok: OK
 button.cancel: Cancelar
 button.yes: Si
@@ -70,12 +70,12 @@ security.forgot_password: '¿Olvidaste la contraseña?'
 security.forgot_password.email_sent: 'Se le ha enviado un correo con instrucciones para elegir una nueva contraseña.'
 security.change_password: 'Cambiar contraseña'
 security.password_expired: 'Tu contraseña ha expirado o tu administrador requiere que la cambies.'
-key.tab: ~
-key.space: ~
-comma: ~
-colon: ~
+key.tab: Tab
+key.space: Space
+comma: Comma
+colon: Colon
 semicolon: 'Punto y Coma'
-vertical_line: ~
+vertical_line: 'Vertical line'
 file: Fichero
 size: Tamaño
 delimiter: Delimitador
@@ -118,21 +118,21 @@ template.locked: Bloqueado
 template.confirm.delete: '¿Está seguro de eliminar esta plantilla?'
 template.conflict.name: 'Ya existe una Plantilla con ese nombre.'
 template.conflict.prefix: 'Ya existe una Plantilla con ese prefijo.'
-template.permission.view_records: ~
-template.permission.create_records: ~
-template.permission.edit_records: ~
-template.permission.postpone_records: ~
-template.permission.resume_records: ~
-template.permission.reassign_records: ~
-template.permission.reopen_records: ~
-template.permission.add_comments: ~
-template.permission.add_files: ~
-template.permission.remove_files: ~
-template.permission.private_comments: ~
-template.permission.send_reminders: ~
-template.permission.delete_records: ~
-template.permission.attach_subrecords: ~
-template.permission.detach_subrecords: ~
+template.permission.view_records: 'View records'
+template.permission.create_records: 'Create records'
+template.permission.edit_records: 'Edit records'
+template.permission.postpone_records: 'Postpone records'
+template.permission.resume_records: 'Resume records'
+template.permission.reassign_records: 'Reassign records'
+template.permission.reopen_records: 'Reopen records'
+template.permission.add_comments: 'Add comments'
+template.permission.add_files: 'Add files'
+template.permission.remove_files: 'Remove files'
+template.permission.private_comments: 'Add/read private comments'
+template.permission.send_reminders: 'Send reminders'
+template.permission.delete_records: 'Delete records'
+template.permission.attach_subrecords: 'Attach subrecords'
+template.permission.detach_subrecords: 'Detach subrecords'
 state: Estado
 states: Estados
 state.new: 'Nuevo estado'
@@ -143,12 +143,12 @@ state.type.initial: Inicial
 state.type.interim: Intermedio
 state.type.final: Final
 state.responsible: Responsable
-state.responsibles: ~
+state.responsibles: Responsibles
 state.responsible.keep: 'Dejar sin cambios'
 state.responsible.assign: Asignar
 state.responsible.remove: Eliminar
 state.transitions: Transiciones
-state.next_for: ~
+state.next_for: 'Next state by default for'
 state.make_initial: 'Hacer inicial'
 state.confirm.delete: '¿Está seguro de eliminar este estado?'
 state.conflict.name: 'Ya existe un Estado con ese nombre.'
@@ -157,5 +157,5 @@ field.conflict.name: 'Ya existe un Campo con ese nombre.'
 field.min_max_values: 'El valor máximo debe ser mayor que el mínimo.'
 field.default_value: 'El valor predeterminado debe estar comprendido entre %min% y %max%.'
 field.value_range: 'El valor de "%name%" debe estar comprendido entre %min% y %max%.'
-list.conflict.key: ~
-list.conflict.value: ~
+list.conflict.key: 'Item with entered key already exists.'
+list.conflict.value: 'Item with entered value already exists.'
