--- a/app/Resources/translations/messages.ja.yml
+++ b/app/Resources/translations/messages.ja.yml
@@ -1,4 +1,4 @@
-lang: 日本語
+# This file is auto-generated using Crowdin.
 button.ok: OK
 button.cancel: キャンセル
 button.yes: はい
@@ -20,7 +20,7 @@ button.select_all: 全て選択
 required: 必須
 error.not_found: アクセスしようとしたページは存在しないか削除されています。
 error.not_authorized: このページのアクセスは許可されていません。
-changes.saved: ~
+changes.saved: 'Your changes were successfully saved.'
 security.log_in: ログイン
 security.log_out: 終了
 security.remember_me: ログインを維持
@@ -70,12 +70,12 @@ security.forgot_password: パスワードの再発行
 security.forgot_password.email_sent: 新しいパスワードのメールを送信しました。
 security.change_password: パスワード変更
 security.password_expired: パスワードの有効期限が過ぎたか、システム管理者より変更を求められています。
-key.tab: ~
-key.space: ~
+key.tab: Tab
+key.space: Space
 comma: コンマ
-colon: ~
+colon: Colon
 semicolon: セミコロン
-vertical_line: ~
+vertical_line: 'Vertical line'
 file: ファイル
 size: サイズ
 delimiter: 区切り文字
@@ -116,23 +116,23 @@ template.status: 状態
 template.active: アクティブ
 template.locked: ロック済み
 template.confirm.delete: テンプレートを削除してよろしいですか？
-template.conflict.name: ~
-template.conflict.prefix: ~
-template.permission.view_records: ~
-template.permission.create_records: ~
-template.permission.edit_records: ~
-template.permission.postpone_records: ~
-template.permission.resume_records: ~
-template.permission.reassign_records: ~
-template.permission.reopen_records: ~
-template.permission.add_comments: ~
-template.permission.add_files: ~
-template.permission.remove_files: ~
-template.permission.private_comments: ~
-template.permission.send_reminders: ~
-template.permission.delete_records: ~
-template.permission.attach_subrecords: ~
-template.permission.detach_subrecords: ~
+template.conflict.name: 'Template with entered name already exists.'
+template.conflict.prefix: 'Template with entered prefix already exists.'
+template.permission.view_records: 'View records'
+template.permission.create_records: 'Create records'
+template.permission.edit_records: 'Edit records'
+template.permission.postpone_records: 'Postpone records'
+template.permission.resume_records: 'Resume records'
+template.permission.reassign_records: 'Reassign records'
+template.permission.reopen_records: 'Reopen records'
+template.permission.add_comments: 'Add comments'
+template.permission.add_files: 'Add files'
+template.permission.remove_files: 'Remove files'
+template.permission.private_comments: 'Add/read private comments'
+template.permission.send_reminders: 'Send reminders'
+template.permission.delete_records: 'Delete records'
+template.permission.attach_subrecords: 'Attach subrecords'
+template.permission.detach_subrecords: 'Detach subrecords'
 state: 状態
 states: ステータス
 state.new: 新規ステータス
@@ -143,19 +143,19 @@ state.type.initial: 初期状態
 state.type.interim: 中間状態
 state.type.final: 最終状態
 state.responsible: 対応者
-state.responsibles: ~
+state.responsibles: Responsibles
 state.responsible.keep: 変更しない
 state.responsible.assign: アサイン
 state.responsible.remove: 除去
 state.transitions: 遷移
-state.next_for: ~
+state.next_for: 'Next state by default for'
 state.make_initial: 初期状態にする
 state.confirm.delete: ステータスを削除してよろしいですか？
-state.conflict.name: ~
-state.conflict.abbreviation: ~
+state.conflict.name: 'State with entered name already exists.'
+state.conflict.abbreviation: 'State with entered abbreviation already exists.'
 field.conflict.name: 入力されたフィールドの名前は既に存在しています。
 field.min_max_values: 最大値は最小値よりも大きい必要があります。
 field.default_value: 'デフォルトの値は %min% から %max% の範囲で指定できます。'
 field.value_range: '値 %name% は、 %min% から %max% の範囲で指定できます。'
-list.conflict.key: ~
-list.conflict.value: ~
+list.conflict.key: 'Item with entered key already exists.'
+list.conflict.value: 'Item with entered value already exists.'
