--- a/app/Resources/translations/messages.sv.yml
+++ b/app/Resources/translations/messages.sv.yml
@@ -1,4 +1,4 @@
-lang: Svenska
+# This file is auto-generated using Crowdin.
 button.ok: OK
 button.cancel: Avbryt
 button.yes: Ja
@@ -20,7 +20,7 @@ button.select_all: 'Markera alla'
 required: obligatorisk
 error.not_found: 'Sidan du försökte komma åt existerar inte eller är borttagen.'
 error.not_authorized: 'Du saknar behörighet att komma åt den här sidan.'
-changes.saved: ~
+changes.saved: 'Your changes were successfully saved.'
 security.log_in: 'Logga in'
 security.log_out: 'Logga ut'
 security.remember_me: 'Förbli inloggad'
@@ -69,13 +69,13 @@ password.cant_change: 'Detta konto använder en extern autentiseringskälla. Det
 security.forgot_password: 'Glömt lösenord'
 security.forgot_password.email_sent: 'Ett mail med instruktioner om hur man väljer ett nytt lösenord har skickats till dig.'
 security.change_password: 'Ändra lösenord'
-security.password_expired: ~
-key.tab: ~
-key.space: ~
-comma: ~
-colon: ~
-semicolon: ~
-vertical_line: ~
+security.password_expired: 'Your password has expired or the administrator requires you to change it.'
+key.tab: Tab
+key.space: Space
+comma: Comma
+colon: Colon
+semicolon: Semicolon
+vertical_line: 'Vertical line'
 file: Fil
 size: Storlek
 delimiter: Avgränsare
@@ -118,21 +118,21 @@ template.locked: Låst
 template.confirm.delete: 'Är du säker på att du vill ta bort den här mallen?'
 template.conflict.name: 'Mall med detta namnet finns redan.'
 template.conflict.prefix: 'Mall med detta prefixet finns redan.'
-template.permission.view_records: ~
-template.permission.create_records: ~
-template.permission.edit_records: ~
-template.permission.postpone_records: ~
-template.permission.resume_records: ~
-template.permission.reassign_records: ~
-template.permission.reopen_records: ~
-template.permission.add_comments: ~
-template.permission.add_files: ~
-template.permission.remove_files: ~
-template.permission.private_comments: ~
-template.permission.send_reminders: ~
-template.permission.delete_records: ~
-template.permission.attach_subrecords: ~
-template.permission.detach_subrecords: ~
+template.permission.view_records: 'View records'
+template.permission.create_records: 'Create records'
+template.permission.edit_records: 'Edit records'
+template.permission.postpone_records: 'Postpone records'
+template.permission.resume_records: 'Resume records'
+template.permission.reassign_records: 'Reassign records'
+template.permission.reopen_records: 'Reopen records'
+template.permission.add_comments: 'Add comments'
+template.permission.add_files: 'Add files'
+template.permission.remove_files: 'Remove files'
+template.permission.private_comments: 'Add/read private comments'
+template.permission.send_reminders: 'Send reminders'
+template.permission.delete_records: 'Delete records'
+template.permission.attach_subrecords: 'Attach subrecords'
+template.permission.detach_subrecords: 'Detach subrecords'
 state: Status
 states: Status
 state.new: 'Ny status'
@@ -143,12 +143,12 @@ state.type.initial: Första
 state.type.interim: Mellanliggande
 state.type.final: Slutlig
 state.responsible: Ansvarig
-state.responsibles: ~
+state.responsibles: Responsibles
 state.responsible.keep: 'Behåll oförändrad'
 state.responsible.assign: Tilldela
 state.responsible.remove: 'Ta bort'
 state.transitions: Övergångar
-state.next_for: ~
+state.next_for: 'Next state by default for'
 state.make_initial: 'Gör första'
 state.confirm.delete: 'Är du säker på att du vill ta bort den här statusen?'
 state.conflict.name: 'Status med detta namnet finns redan.'
@@ -157,5 +157,5 @@ field.conflict.name: 'Fält med detta namnet finns redan.'
 field.min_max_values: 'Högsta värdet bör vara större än minimum en.'
 field.default_value: 'Standardvärdet bör vara i intervallet från %min% till %max%.'
 field.value_range: 'Värdet av "%name%" ska vara i intervallet från %min% till %max%.'
-list.conflict.key: ~
-list.conflict.value: ~
+list.conflict.key: 'Item with entered key already exists.'
+list.conflict.value: 'Item with entered value already exists.'
